Fix menu hover issue - fix footer positioning - align skills figures

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,13 +6,16 @@
     border: none;
 }
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
     font-family: 'Hind', sans-serif;
     color: #8c8c8c;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-
+    max-width: 1800px;
+    margin: 0 auto;
 }
 
 /* Positioning the logo and the menu using display */
@@ -57,13 +60,13 @@ h2 {
     color: inherit;
     text-decoration: none;
     font-size: 2em;
+    padding: 5px;
 }
 
 #menu a:hover {
     background-color: #8c8c8c;
     color: #fff;
     border-radius: 5px;
-    padding: 5px;
 }
 
 /* Adds a line under the menu a to help the user locate himself within the site */
@@ -81,6 +84,10 @@ p {
     margin: 30px;
 }
 
+#about h2 {
+    margin: 15px;
+}
+
 #about-me {
     display: flex;
     flex-direction: column;
@@ -95,7 +102,11 @@ p {
 }
 
 #photo {
-    margin: 30px;
+    margin: 0 30px;
+}
+
+#photo img {
+    margin-bottom: 30px;
 }
 
 /* Skills section */
@@ -107,13 +118,26 @@ p {
     text-align: center;
 }
 
+#skills h2 {
+    margin: 15px;
+}
+
 #skills-container {
     margin: 30px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: end;
+    align-items: center;
+    max-width: 1000px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 figure {
     font-size: 2rem;
     color: #000;
+    margin-bottom: 40px;
 }
 
 /* Download CV section */
@@ -123,6 +147,14 @@ figure {
     flex-direction: column;
     margin: 30px;
     text-align: center;
+}
+
+#cv-download h2 {
+    margin: 15px;
+}
+
+#cv-download p {
+    margin: 0 15px 15px;
 }
 
 .fa-file-arrow-down {
@@ -144,6 +176,14 @@ figure {
 #contact-form {
     margin: 30px;
     text-align: center;
+}
+
+#contact-form h2 {
+    margin: 15px;
+}
+
+#contact-form p {
+    margin: 0 15px 15px;
 }
 
 #contact-form-center {
@@ -220,20 +260,24 @@ figure {
 /* Footer */
 
 footer {
-    height: 150px;
     margin-top: 30px;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
 
 .social-networks {
     text-align: center;
 }
 
-.social-networks>li {
+.social-networks > li {
     display: inline;
 }
 
 .social-networks i {
-    font-size: 160%;
+    font-size: 130%;
     margin: 1%;
     padding: 3%;
     color: #8c8c8c;
